added mobile menu + adaptives

--- a/index.html
+++ b/index.html
@@ -35,50 +35,75 @@
 					</ul>
 
 					<p class="lang">PL</p>
+
+					<div class="burger" id="burger">
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
 				</div>
 			</div>
 		</header>
 
 		<section class="menu" id="popup-menu">
-			<div class="menu__inner">
-				<ul class="menu__inner-list">
-					<li class="menu__inner-item">
-						<a href="/" class="menu__inner-link">terminal POS</a>
-					</li>
-					<li class="menu__inner-item">
-						<a href="/" class="menu__inner-link">Panel PC</a>
-					</li>
-					<li class="menu__inner-item">
-						<a href="/" class="menu__inner-link"
-							>Android Panel PC
-						</a>
-					</li>
-					<li class="menu__inner-item">
-						<a href="/" class="menu__inner-link">Drawers</a>
-					</li>
-				</ul>
+			<div class="menu__container">
+				<div class="menu__inner">
+					<ul class="menu__inner-list">
+						<li class="menu__inner-item">
+							<a href="/" class="menu__inner-link">terminal POS</a>
+						</li>
+						<li class="menu__inner-item">
+							<a href="/" class="menu__inner-link">Panel PC</a>
+						</li>
+						<li class="menu__inner-item">
+							<a href="/" class="menu__inner-link"
+								>Android Panel PC
+							</a>
+						</li>
+						<li class="menu__inner-item">
+							<a href="/" class="menu__inner-link">Drawers</a>
+						</li>
+					</ul>
 
-				<ul class="menu__inner-list">
-					<li class="menu__inner-item">
-						<a href="/" class="menu__inner-link">Kiosks</a>
-					</li>
-					<li class="menu__inner-item">
-						<a href="/" class="menu__inner-link"
-							>Barcode scanners</a
-						>
-					</li>
-					<li class="menu__inner-item">
-						<a href="/" class="menu__inner-link"
-							>Stands ( Imago Tree )
-						</a>
-					</li>
-				</ul>
+					<ul class="menu__inner-list">
+						<li class="menu__inner-item">
+							<a href="/" class="menu__inner-link">Kiosks</a>
+						</li>
+						<li class="menu__inner-item">
+							<a href="/" class="menu__inner-link"
+								>Barcode scanners</a
+							>
+						</li>
+						<li class="menu__inner-item">
+							<a href="/" class="menu__inner-link"
+								>Stands ( Imago Tree )
+							</a>
+						</li>
+					</ul>
 
-				<div class="menu__img">
-					<img src="images/menuDesktop.png" alt="" />
+					<div class="menu__img">
+						<img src="images/menuDesktop.png" alt="" />
+					</div>
 				</div>
 			</div>
 		</section>
+
+        <section class="mobile-menu active" id="mobile-menu">
+            <ul class="mobile-nav">
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">O nas</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Kontakt</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">News</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Terminal POS</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Panel PC</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Android Panel PC</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Drawers</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Kiosks</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Barcode scanners</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Stands ( Imago Tree )
+                </a></li>
+                <li class="mobile-nav__item"><p class="lang">PL</p></li>
+            </ul>
+        </section>
 
 		<main class="main">
 			<section class="hero">
@@ -109,6 +134,10 @@
 			</section>
 
 			<section class="big-img">
+				<img src="images/bigImgSection.png" alt="" />
+			</section>
+
+			<section class="big-img-mobile">
 				<img src="images/bigImgSection.png" alt="" />
 			</section>
 
@@ -573,6 +602,19 @@
 								<a href="/">00 111 22 33</a>
 							</div>
 						</div>
+					</div>
+
+					<div class="footer__rights-mobile">
+						<a href="/" class="footer__privacy"
+							>Polityka prywatności</a
+						>
+						<a href="" class="made-by"
+							>Projektowanie i rozwój
+							<img src="images/icons/mkeyLogo.svg" alt=""
+						/></a>
+						<p class="rights">
+							©2023 Wszelkie prawa zastrzeżone. IMAGO
+						</p>
 					</div>
 				</div>
 			</div>
