finished mobile-menu

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</div>
 		</section>
 
-        <section class="mobile-menu active" id="mobile-menu">
+        <section class="mobile-menu" id="mobile-menu">
             <ul class="mobile-nav">
                 <li class="mobile-nav__item"><a href="" class="mobile-nav__link">O nas</a></li>
                 <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Kontakt</a></li>
@@ -99,9 +99,8 @@
                 <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Drawers</a></li>
                 <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Kiosks</a></li>
                 <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Barcode scanners</a></li>
-                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Stands ( Imago Tree )
-                </a></li>
-                <li class="mobile-nav__item"><p class="lang">PL</p></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Stands ( Imago Tree )</a></li>
+                <li class="mobile-nav__item"><p class="lang-Mob">PL</p></li>
             </ul>
         </section>
 
