added single page for good

--- a/catalog.html
+++ b/catalog.html
@@ -35,6 +35,12 @@
 					</ul>
 
 					<p class="lang">PL</p>
+
+					<div class="burger" id="burger">
+						<div></div>
+						<div></div>
+						<div></div>
+					</div>
 				</div>
 			</div>
 		</header>
@@ -79,6 +85,22 @@
 				</div>
 			</div>
 		</section>
+
+        <section class="mobile-menu" id="mobile-menu">
+            <ul class="mobile-nav">
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">O nas</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Kontakt</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">News</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Terminal POS</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Panel PC</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Android Panel PC</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Drawers</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Kiosks</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Barcode scanners</a></li>
+                <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Stands ( Imago Tree )</a></li>
+                <li class="mobile-nav__item"><p class="lang-Mob">PL</p></li>
+            </ul>
+        </section>
 
 		<main class="main-catalog">
 			
